--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "prettier-check": "prettier . --check",
-    "stage": "npm run lint && npm run prettier-check",
+    "prettier:check": "prettier . --check",
+    "prettier:write": "prettier . --write",
+    "stage": "npm run lint && npm run prettier:write",
     "preview": "vite preview",
     "prepare": "husky"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
