--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "prettier:check": "prettier . --check",
     "prettier:write": "prettier . --write",
-    "stage": "npm run lint && npm run prettier:write && git add",
+    "stage": "npm run lint && npm run prettier:write",
     "preview": "vite preview",
     "prepare": "husky"
   },
