--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "stage": "lint-staged && pretty-quick --staged",
     "preview": "vite preview",
-    "prepare": "husky",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "prepare": "husky"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
