--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# PocketBase
+*/pb_data/data.db
+*/pb_data/logs.db
+*/pb_data/data.db-shm
+*/pb_data/data.db-wal
+*/pb_data/logs.db-shm
+*/pb_data/logs.db-wal
